--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+
 body {
+  text-align: center;
+  background-image: linear-gradient(to right, white, rgb(255, 248, 234));
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, 'Poppins', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
